--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: sh
 
 before_script:
-  - wget "http://ftp.debian.org/debian/pool/main/s/shellcheck/shellcheck_0.3.7-5_amd64.deb"
+  - wget "http://es.archive.ubuntu.com/ubuntu/pool/universe/s/shellcheck/shellcheck_0.3.7-5_amd64.deb"
   - sudo dpkg -i "shellcheck_0.3.7-5_amd64.deb"
 
 script:
